mule-user-guide/v/3.2/cxf-module-reference.adoc
= CXF Module Reference

== Introduction

The Mule CXF module provides support for web service integration via http://incubator.apache.org/cxf/[Apache CXF]. Apache CXF is an open source services framework that helps you build and develop services using front-end programming APIs, like JAX-WS.

== Using the CXF Module

Use the following links for information on configuring and using the CXF transport with your implementation of Mule.

*Building and Consuming Services*

* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/cxf-module-overview[Overview]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/building-web-services-with-cxf[Building Web Services]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/consuming-web-services-with-cxf[Consuming Web Services]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/proxying-web-services-with-cxf[Proxying Web Services]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/using-http-get-requests[Using HTTP GET Requests]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/bookstore-example[Bookstore Example]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/cxf-module-configuration-reference[Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/wsdl-connectors[Using the WSDL Connector]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/upgrading-cxf-from-mule-2[Upgrading CXF from Mule 2]

*Web Service Standards*

* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/supported-web-service-standards[Supported Web Service Standards]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/using-mtom[Using MTOM]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/enabling-ws-addressing[Enabling WS-Addressing]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/enabling-ws-security[Enabling WS-Security]
* http://cxf.apache.org/docs/ws-trust.html[WS-Trust], http://cxf.apache.org/docs/ws-secureconversation.html[WS-SecureConversation], and http://cxf.apache.org/docs/ws-securitypolicy.html[WS-SecurityPolicy] on the CXF website

== Troubleshooting

This section includes common problems and solutions you might encounter when using the CXF transport.

*I've received a "java.lang.IllegalArgumentException: wrong number of arguments" when using the CXF outbound endpoint*

The CXF outbound endpoint uses the CXF generated to client to send messages. Because of this, your message payload must match the signature of the operation being invoked. This error results when the payload does not match the signature.

Here's an example. If you have an operation on the client like this:

[source, java, linenums]
----
public void sendData(String data1, String data2, String data3);
----

Your message payload must be like this:

[source, code, linenums]
----
Object payload = new Object[] { "data1", "data2", "data3" };
----

*My WSDL does not have the correct service address (i.e. its localhost instead of foo.com)*

If you are doing WSDL-first development, ensure that your @WebService annotation on your service implementation has the correct name, serviceName, targetNamespace, and portName attributes. If these are not correct, CXF cannot navigate your WSDL, find the address, and replace it with the address currently being used.

Your WebService annotation should look like this:

[source, java, linenums]
----
@WebService(name = "YourWSDLPortType",
            serviceName = "YourServiceName",
            portName = "YourPortName",
            targetNamespace = "http://your-namespace",
            endpointInterface = "your.endpoint.Interface",
            wsdlLocation = "your.wsdl")
----
